@@ -1,3 +1,8 @@
+2002-03-17  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* Makefile.am: Make a convenience library.
+	* Makefile.in: Rebuilt.
+
 2002-03-15  Anthony Green  <green@redhat.com>
 
 	* misc.c (GC_init_inner): Initialize GC_write_cs before use.
